@startuml
'https://plantuml.com/class-diagram

class Channel
class ConsoleIO implements IO{
public ConsoleIO(Scanner sc)

}
class CSVFileIO implements FileIO{
List ReadFile()
void saveReport()
}
class DataProcessing{
parseStrings()
populateObjects
}
interface FileIO{
List ReadFile()
void saveReport()
}

interface IO{
void logMessage(String message)
}
class Item{
public double getProfitPerItemType()....


}
class Menu
class Order{
public double getProfitForOrder()....
}
class Region{
public double getRevenue()......{
    }
class ReportContent{
public String toString()
}
class ServiceSales{
 HashMap<String,ArrayList<Order>> regionsWithOrders;
 HashMap <Long,Order> allOrders;
 ArrayList<Item> allItems;
 HashMap<String, Item> hashMapItems;
  public String getMostSoldItemToDisplay()
  public void displayMostSoldItemType() etc ...
}


CSVFileIO <|-- ReportContent
CSVFileIO <|--|> DataProcessing
DataProcessing --|> Order
Item --|> ServiceSales
Region --|> ServiceSales

DataProcessing --|> Region
DataProcessing --|> Item
DataProcessing --|> Channel
ServiceSales --|> ReportContent
ServiceSales --|> ConsoleIO
Order --|> ServiceSales
Channel --|> ServiceSales



Menu <|--|> Channel
Menu <|--|> Region
Menu <|--|> Order
Menu <|--|> Item
menu <|--|> ServiceSales



@enduml